--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.47.1",
     "react-native-interactable": "^0.1.1",
-    "react-native-swipe-cards": "^0.1.0",
+    "react-native-lightbox": "^0.6.0",
+    "react-native-looped-carousel": "^0.1.7",
+    "react-native-vector-icons": "^4.3.0",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
